# cuda_beginner

./: CMakeLists.txt  README.md  Sobel.cu  add.cu  add2.cu  cudaDevice.cu
